# Coles_Cool_Emulator

./: CMakeLists.txt  README.md  file_parse_test  main.c
cartridge/: cartridge.c  cartridge.h
cpu/: cpu.c  cpu.h  opcodes.h
general/: units.h
memory/: memory_manager.c  memory_manager.h
parser/: file_parser.c  file_parser.h
test/: tester.c
